kubernetes/superset-post-config-1.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: superset
    meta.helm.sh/release-namespace: default
  creationTimestamp: "2024-05-05T18:22:10Z"
  labels:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: superset
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    helm.sh/chart: postgresql-12.1.6
  name: superset-postgresql
  namespace: default
  resourceVersion: "146749"
  uid: 82d81ab7-14c2-4e2e-a539-4088d011aeab
spec:
  clusterIP: 10.96.139.38
  clusterIPs:
  - 10.96.139.38
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: tcp-postgresql
    port: 5432
    protocol: TCP
    targetPort: tcp-postgresql
  selector:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: superset
    app.kubernetes.io/name: postgresql
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
