kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: superset
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/client-max-body-size: "100m"
    nginx.org/proxy-connect-timeout: "5m"
    nginx.org/proxy-read-timeout: "5m"
    nginx.org/proxy-send-timeout: "5m"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - change.this
    secretName: default-cert
  rules:
  - host: change.this
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: superset
            port:
              number: 8088
